fix: break too long words

--- a/public/_sass/_global.scss
+++ b/public/_sass/_global.scss
@@ -6,6 +6,7 @@ html {
 
 body {
   @include body-font;
+  @include break-too-long-words;
 }
 
 .text-small {
